--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ opt-level = 3
 codegen-units = 1
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy.git", features = ["dynamic_linking"] }
+bevy = { version = "0.11.0", features = ["dynamic_linking"] }
 color-eyre = "0.6.2"
 image = "0.24.6"
 rand = "0.8.5"
